welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:31: error: Unmatched closing brace '}' ignored here
}
^